# src/main/kotlin/com/bos/backend/presentation/auth/controller/AuthController.kt
@@ -1,14 +1,17 @@
 package com.bos.backend.presentation.auth.controller
 
 import com.bos.backend.application.auth.AuthService
+import com.bos.backend.presentation.auth.dto.CheckEmailResponse
 import com.bos.backend.presentation.auth.dto.CommonSignResponseDTO
 import com.bos.backend.presentation.auth.dto.EmailVerificationCheckDTO
 import com.bos.backend.presentation.auth.dto.EmailVerificationRequestDTO
 import com.bos.backend.presentation.auth.dto.SignInRequestDTO
 import com.bos.backend.presentation.auth.dto.SignUpRequestDTO
 import org.springframework.http.HttpStatus
+import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PostMapping
 import org.springframework.web.bind.annotation.RequestBody
+import org.springframework.web.bind.annotation.RequestParam
 import org.springframework.web.bind.annotation.ResponseStatus
 import org.springframework.web.bind.annotation.RestController
 
@@ -27,6 +30,12 @@ class AuthController(
     suspend fun signIn(
         @RequestBody signInRequestDTO: SignInRequestDTO,
     ): CommonSignResponseDTO = authService.signIn(signInRequestDTO)
+
+    @GetMapping("/auth/check-email")
+    @ResponseStatus(HttpStatus.OK)
+    suspend fun checkEmail(
+        @RequestParam email: String,
+    ): CheckEmailResponse = authService.isBosEmailUserAbsent(email)
 
     @PostMapping("/auth/email-verification")
     @ResponseStatus(HttpStatus.NO_CONTENT)
