# src/main/kotlin/com/bos/backend/presentation/auth/dto/CheckEmailResponse.kt
@@ -1,0 +1,9 @@
+package com.bos.backend.presentation.auth.dto
+
+import com.bos.backend.domain.user.enum.ProviderType
+
+data class CheckEmailResponse(
+    val email: String,
+    val isExist: Boolean,
+    val provider: ProviderType,
+)
