# src/main/resources/static/api/openapi.yml
@@ -110,6 +110,54 @@ paths:
                     type: object
         '500':
           $ref: "#/components/responses/InternalServerErrorResponseSpec"
+  /auth/check-email:
+    get:
+      tags:
+        - auth
+      operationId: checkEmail
+      summary: 이메일 가입 여부 확인
+      description: 입력한 이메일이 이미 가입된 사용자 계정인지 확인합니다.
+      parameters:
+        - name: email
+          in: query
+          description: 확인할 이메일 주소
+          required: true
+          schema:
+            type: string
+            format: email
+      responses:
+        '200':
+          description: |-
+            이메일 가입 여부 반환
+
+            해당 이메일로 가입이 되어있는지, 가입되어 있다면 어떤 로그인타입(이메일 인증, sns 인증)인지 반환합니다.
+
+            이메일이 존재하는 경우, `exists` 필드가 true로 설정되고, `provider` 필드에는 해당 이메일의 로그인 타입이 포함됩니다.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  email:
+                    type: string
+                  isExist:
+                    type: boolean
+                    description: 이메일이 이미 가입된 경우 true, 그렇지 않은 경우 false
+                  provider:
+                    $ref: "#/components/schemas/Provider"
+                example:
+                  email: abc@abc.com
+                  exists: true
+                  provider: bos
+        '400':
+          description: 잘못된 이메일 형식 또는 누락된 파라미터
+        '404':
+          description: |-
+            해당 이메일로 가입되지 않은 유저가 있는 경우
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/BaseProblemDetails'
   /auth/email-verification:
     post:
       tags:
@@ -261,6 +309,39 @@ paths:
 
             ### 에러 코드 (wip)
             - `INVALID_VERIFICATION_CODE`: 이메일 인증 코드가 만료되거나 유효하지 않은 경우
+#  /auth/password:
+#    patch:
+#        tags:
+#            - auth
+#        operationId: resetPassword
+#        summary: "[MOCK] 비밀번호 재설정"
+#        description: |-
+#            비밀번호 재설정을 수행합니다.
+#
+#            ## Request Body
+#            - email: 비밀번호를 재설정할 이메일 주소
+#            - newPassword: 새 비밀번호
+#
+#            ## Response
+#            - 204: 비밀번호가 성공적으로 재설정된 경우
+#            - 400: 비밀번호 재설정이 실패한 경우
+#        requestBody:
+#            required: true
+#            content:
+#            application/json:
+#                schema:
+#                type: object
+#                properties:
+#                    email:
+#                    $ref: "#/components/schemas/Email"
+#                    newPassword:
+#                    type: string
+#                    description: 새 비밀번호
+#        responses:
+#            '204':
+#            description: |-
+#                비밀번호가 성공적으로 재설정되면 응답 바디 없이 204만 반환합니다.
+
 components:
   securitySchemes:
     BearerAuth:
